--- a/templates/faculty/dashboard.html
+++ b/templates/faculty/dashboard.html
@@ -1,6 +1,7 @@
-{% extends 'auth/dashboard.html' %}
+{% extends 'base/dashboard.html' %}
 
 {% load my_filters %}
+{% load render_table from django_tables2 %}
 
 {% block title_text %}Faculty Dashboard{% endblock %}
 
