--- a/templates/faculty/manage.html
+++ b/templates/faculty/manage.html
@@ -1,5 +1,6 @@
 <!-- facility/templates/faculty/manage.html -->
 {% extends 'base/manage.html' %}
+{% load render_table from django_tables2 %}
 
 {% block title_text %}Manage Faculty{% endblock %}
 
