--- a/templates/faculty/form.html
+++ b/templates/faculty/form.html
@@ -1,5 +1,2 @@
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit" class="btn btn-primary">Create</button>
-</form>
+<!-- facility/templates/faculty/form.html -->
+{% extends 'base/form.html' %}
