--- a/templates/faculty/list.html
+++ b/templates/faculty/list.html
@@ -1,31 +1,11 @@
-{% extends 'base/layout.html' %}
+<!-- facility/templates/faculty/list.html -->
+{% extends 'base/list.html' %}
+{% load static %}
+{% load render_table from django_tables2 %}
+{% load my_filters %}
 
-{% block content %}
-{% if org %}
-<h1>Faculty of {{ facility.name }}</h1>
-{% else %}
-<h1>Faculty</h1>
-{% endif %}
-<table id="facultyTable" class="table table-striped table-bordered">
-    <thead>
-        <tr>
-            <th>First Name</th>
-            <th>Last Name</th>
-        </tr>
-    </thead>
-    <tbody>
-        {% for fac in faculty %}
-        <tr>
-            <td><a href="{% url 'faculty_show' faculty_slug=fac.slug %}">{{ fac.first_name }}</a></td>
-            <td>{{ fac.last_name }}</td>
-        </tr>
-        {% endfor %}
-    </tbody>
-</table>
+{% block title_text %}{{ organization_labels.faculty_label | title }}{% endblock title_text %}
 
-<script>
-    $(document).ready(function() {
-        $('#facultyTable').DataTable();
-    });
-    </script>
-{% endblock content %}
+{% block objects_title %}{{ organization_labels.faculty_label | title }}{% endblock objects_title %}
+
+{% block object_type %}{{ organization_labels.faculty_label | title }}{% endblock object_type%}
