--- a/templates/quarters/show.html
+++ b/templates/quarters/show.html
@@ -1,29 +1,7 @@
-{% extends 'base/layout.html' %}
+{% extends 'base/show.html' %}
 
-{% block title %}[SCSS] - {{ department.name }}{% endblock title %}
+{% block title_text %}{{ quarters.name }}{% endblock title_text %}
 
-{% block content %}
-    <div class="container">
-    <h1>{{ department.name }}</h1>
-      <ul id="department.name">
-        <li>
-          <span class="field-name">Name:</span>
-          <span class="field-value">{{ department.name }}</span>
-        </li>
-        <li>
-          <span class="field-name">Abbreviation:</span>
-          <span class="field-value">{{ department.abbreviation }}</span>
-        </li>
-        <li>
-          <span class="field-name">Description:</span>
-          <span class="field-value">{{ department.description }}</span>
-        </li>
-        {% if department.parent is defined and department.parent %}
-        <li>
-          <span class="field-name">Parent:</span>
-          <span class="field-value">{{ department.parent.name }}</span>
-        </li>
-        {% endif %}
-        
-    </div>
-{% endblock content %}
+{% block object_identifier %}{% endblock object_identifier %}
+
+{% block object_details %}{{ object.facility | title }}{% endblock object_details %}
