--- a/templates/facility/manage.html
+++ b/templates/facility/manage.html
@@ -12,7 +12,7 @@
 
 {% for item in tables_with_names %}
     <section class="card">
-        <h2> {{ item.name | title }} 
+        <h2> {{ item.name_plural|default:item.name|title }} 
             <a href="{{ item.create_url }}">
             {% if item.icon %}
                 <i class="fas {{ item.icon }}"></i>
